Index: Small fixes of page structure

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 			<li><a href="#">ua</a></li>
 			<li><a href="#">en</a></li>
 		</ul>
-		<img src="images/logo.png" alt="logo" />
+		<a href="#">
+			<img src="images/logo.png" alt="logo" />
+		</a>
 		<h1>Черкаський Музей Археології<br /><span>Середньої Наддніпрянщини</span></h1>
 		<ul class="menu-head">
 			<li><a href="#">Книга відгуків</a></li>
@@ -23,31 +25,52 @@
 	</div>
 	<div class="sidebar">
 		<form>
-   			<input type="search" name="search" placeholder="Пошук">
+   			<input type="search" name="search" placeholder="search">
   		</form>
-		<dl class="sidebar-menu">
-			<dt>Меню</dt>
-			<dd><a href="#">Про музей</a></dd>
-			<dd><a href="#">Відвідувачам</a></dd>
-			<dd><a href="#">Наші партнери</a></dd>
-			<dd><a href="#">Наші послуги</a></dd>
-			<dd><a href="#">Експозиції музею</a></dd>
-			<dd><a href="#">Галереї музею</a></dd>
-			<dd><a href="#">Наукова робота</a></dd>
-			<dd><a href="#">Археологічний словник</a></dd>
-			<dd><a href="#">Допомога музею</a></dd>
-			<dd><a href="#">Ваші запитання</a></dd>
-			<dd><a href="#">Архів новин</a></dd>
-		</dl>
+  		<input class="button" type="button" value="Пошук">
+		<ul class="sidebar-menu">
+			<li class="active">
+				<a href="#">Про музей</a>
+				<ul class="no-display">
+					<li>
+						<a href="#">Музей сьогодні</a>
+
+					</li>
+					<li><a href="#">Історія музею</a></li>
+					<li><a href="#">Перспективи музею</a></li>
+					<li><a href="#">Наші меценати</a></li>
+					<li><a href="#">Дарувальники музею</a></li>
+				</ul>
+			</li>
+			<li>
+				<a href="#">Відвідувачам</a>
+				<ul class="no-display">
+					<li><a href="#">Як нас знайти</a></li>
+					<li><a href="#">Графік роботи</a></li>
+					<li><a href="#">Колектив музею</a></li>
+					<li><a href="#">Наші послуги</a></li>
+					<li><a href="#">Наші партнери</a></li>
+				</ul>
+			</li>
+			<li><a href="#">Наші партнери</a></li>
+			<li><a href="#">Наші послуги</a></li>
+			<li><a href="#">Експозиції музею</a></li>
+			<li><a href="#">Галереї музею</a></li>
+			<li><a href="#">Наукова робота</a></li>
+			<li><a href="#">Археологічний словник</a></li>
+			<li><a href="#">Допомога музею</a></li>
+			<li><a href="#">Ваші запитання</a></li>
+			<li><a href="#">Архів новин</a></li>
+		</ul>
 		<dl class="notice">
-			<dt><h4>Анонс подій</h4></dt>
+			<dt><h3>Анонс подій</h3></dt>
 			<dd>
-				<h5>«Вже давно відомо»</h5>
+				<h4>«Вже давно відомо»</h4>
 				Вже давно відомо, що читабельний зміст буде заважати зосередитись людині, яка оцінює композицію сторінки. Сенс використання полягає в тому, що цей текст має більш-менш нормальне розподілення літер на відміну від, наприклад, "Тут іде текст.
 			<span class="further"><a href="#">Далі</a></span>
 			</dd>
 			<dd>
-				<h5>«Вже давно відомо»</h5>
+				<h4>«Вже давно відомо»</h4>
 				Вже давно відомо, що читабельний зміст буде заважати зосередитись людині, яка оцінює композицію сторінки. Сенс використання полягає в тому, що цей текст має більш-менш нормальне розподілення літер на відміну від, наприклад, "Тут іде текст.
 			<span class="further"><a href="#">Далі</a></span>
 			</dd>
@@ -55,37 +78,41 @@
 	</div>
     <div class="content">
     	<img src="images/main-pic.png" alt="picture" />
-    	<h2>Події</h2>
+    	<h1>Події</h1>
     	<ul class="news">
     		<li>
     			<img src="images/pic.png" alt="pic" />
-    			<h3>«Вже давно відомо»</h3>
+    			<h2>«Вже давно відомо»</h2>
     			<p>Вже давно відомо, що читабельний зміст буде заважати зосередитись людині, яка оцінює композицію сторінки. Сенс використання Lorem Ipsum полягає в тому, що цей текст має більш-менш нормальне розподілення літер на відміну від, наприклад, "Тут іде текст. Тут іде текст." Це робить текст схожим на оповідний. Багато програм верстування та веб-дизайну використовують Lorem Ipsum як зразок і пошук за терміном "lorem ipsum" відкриє багато веб-сайтів, які знаходяться ще в зародковому стані. Різні версії Lorem Ipsum з'явились за минулі роки, деякі випадково, деякі було створено зумисно (зокрема, жартівливі).
     				<span class="further"><a href="#">Далі</a></span>
     			</p>
     		</li>
     		<li>
     			<img src="images/pic.png" alt="pic" />
-    			<h3>«Вже давно відомо»</h3>
+    			<h2>«Вже давно відомо»</h2>
     			<p>Вже давно відомо, що читабельний зміст буде заважати зосередитись людині, яка оцінює композицію сторінки. Сенс використання Lorem Ipsum полягає в тому, що цей текст має більш-менш нормальне розподілення літер на відміну від, наприклад, "Тут іде текст. Тут іде текст." Це робить текст схожим на оповідний. Багато програм верстування та веб-дизайну використовують Lorem Ipsum як зразок і пошук за терміном "lorem ipsum" відкриє багато веб-сайтів, які знаходяться ще в зародковому стані. Різні версії Lorem Ipsum з'явились за минулі роки, деякі випадково, деякі було створено зумисно (зокрема, жартівливі).
 					<span class="further"><a href="#">Далі</a></span>
 				</p>
     		</li>
     	</ul>
-    	<ul class="pages">
-    		<li class="active"><a href="#">Попередня</a></li>
-    		<li><a href="#">1</a></li>
-    		<li><a href="#">2</a></li>
-    		<li><a href="#">3</a></li>
-    		<li><a href="#">4</a></li>
-    		<li><a href="#">5</a></li>
-    		<li><a href="#">6</a></li>
-    		<li><a href="#">7</a></li>
-    		<li><a href="#">8</a></li>
-    		<li class="active"><a href="#">Наступна</a></li>
-    	</ul>
-    	<p>&copy; Черкаський археологічний музей 2000-2013. При повному чи частковому використанні матеріалів посилання на сайт "ЧАМ" обовязкове. Дизайн сайту розроблено GeekHub і модернізований "ЧАМ".
-    	</p>
+    	<div>
+	    	<ul class="pages">
+	    		<li>Попередня</li>
+	    		<li class="active"><a href="#">1</a></li>
+	    		<li><a href="#">2</a></li>
+	    		<li><a href="#">3</a></li>
+	    		<li><a href="#">4</a></li>
+	    		<li><a href="#">5</a></li>
+	    		<li><a href="#">6</a></li>
+	    		<li><a href="#">7</a></li>
+	    		<li><a href="#">8</a></li>
+	    		<li class="active"><a href="#">Наступна</a></li>
+	    	</ul>
+    	</div>
+    	<div class="footer">
+	    	<p>&copy; Черкаський археологічний музей 2000-2013. При повному чи частковому використанні матеріалів посилання на сайт "ЧАМ" обовязкове. Дизайн сайту розроблено GeekHub і модернізований "ЧАМ".
+	    	</p>
+    	</div>
     	</div>
     </div>
     <div class="footer">
