--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<a href="#">
 			<img src="images/logo.png" alt="logo" />
 		</a>
-		<h1>Черкаський Музей Археології<br /><span>Середньої Наддніпрянщини</span></h1>
+		<span class="name">Черкаський Музей Археології<br />Середньої Наддніпрянщини</span>
 		<ul class="menu-head">
 			<li><a href="#">Книга відгуків</a></li>
 			<li><a href="#">Мапа сайту</a></li>
@@ -62,19 +62,21 @@
 			<li><a href="#">Ваші запитання</a></li>
 			<li><a href="#">Архів новин</a></li>
 		</ul>
-		<dl class="notice">
-			<dt><h3>Анонс подій</h3></dt>
-			<dd>
+		<ul class="notice">
+			<li><h3>Анонс подій</h3></li>
+			<li>
 				<h4>«Вже давно відомо»</h4>
-				Вже давно відомо, що читабельний зміст буде заважати зосередитись людині, яка оцінює композицію сторінки. Сенс використання полягає в тому, що цей текст має більш-менш нормальне розподілення літер на відміну від, наприклад, "Тут іде текст.
-			<span class="further"><a href="#">Далі</a></span>
-			</dd>
-			<dd>
+				Вже давно відомо, що читабельний зміст буде заважати зосередитись людині, яка оцінює композицію сторінки. Сенс використання полягає в тому, що цей текст має більш-менш нормальне розподілення літер на відміну від, наприклад, "Тут іде текст.</li>
+			<li class="further">
+				<a href="#">Далі</a>				
+			</li>
+			<li>
 				<h4>«Вже давно відомо»</h4>
-				Вже давно відомо, що читабельний зміст буде заважати зосередитись людині, яка оцінює композицію сторінки. Сенс використання полягає в тому, що цей текст має більш-менш нормальне розподілення літер на відміну від, наприклад, "Тут іде текст.
-			<span class="further"><a href="#">Далі</a></span>
-			</dd>
-		</dl>
+				Вже давно відомо, що читабельний зміст буде заважати зосередитись людині, яка оцінює композицію сторінки. Сенс використання полягає в тому, що цей текст має більш-менш нормальне розподілення літер на відміну від, наприклад, "Тут іде текст.</li>
+			<li class="further">
+				<a href="#">Далі</a>
+			</li>
+		</ul>
 	</div>
     <div class="content">
     	<img src="images/main-pic.png" alt="picture" />
