home: changed font-family, fixed FF bug, added submenu

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 			<li><a href="#">ua</a></li>
 			<li><a href="#">en</a></li>
 		</ul>
+		<span class="logo">
 		<a href="#">
 			<img src="images/logo.png" alt="logo" />
 		</a>
+		</span>
 		<span class="name">Черкаський Музей Археології<br />Середньої Наддніпрянщини</span>
 		<ul class="menu-head">
 			<li><a href="#">Книга відгуків</a></li>
@@ -22,16 +24,16 @@
 			<li><a href="#">Контакти</a></li>
 			<li><a href="#">На головну</a></li>
 		</ul>
-	</div>
+	</div> 
 	<div class="sidebar">
 		<form>
-   			<input type="search" name="search" placeholder="search">
+   			<input type="search" name="search" placeholder="Пошук">
   		</form>
-  		<input class="button" type="button" value="Пошук">
+  		<!--<input class="button" type="button" value="Пошук">-->
 		<ul class="sidebar-menu">
 			<li class="active">
 				<a href="#">Про музей</a>
-				<ul class="no-display">
+				<ul class="sidebar-submenu">
 					<li>
 						<a href="#">Музей сьогодні</a>
 
@@ -66,58 +68,57 @@
 			<li><h3>Анонс подій</h3></li>
 			<li>
 				<h4>«Вже давно відомо»</h4>
-				Вже давно відомо, що читабельний зміст буде заважати зосередитись людині, яка оцінює композицію сторінки. Сенс використання полягає в тому, що цей текст має більш-менш нормальне розподілення літер на відміну від, наприклад, "Тут іде текст.</li>
+				<p>Вже давно відомо, що читабельний зміст буде заважати зосередитись людині, яка оцінює композицію сторінки. Сенс використання полягає в тому, що цей текст має більш-менш нормальне розподілення літер на відміну від, наприклад, "Тут іде текст.</p>
+			</li>
 			<li class="further">
 				<a href="#">Далі</a>				
 			</li>
 			<li>
 				<h4>«Вже давно відомо»</h4>
-				Вже давно відомо, що читабельний зміст буде заважати зосередитись людині, яка оцінює композицію сторінки. Сенс використання полягає в тому, що цей текст має більш-менш нормальне розподілення літер на відміну від, наприклад, "Тут іде текст.</li>
+				<p>Вже давно відомо, що читабельний зміст буде заважати зосередитись людині, яка оцінює композицію сторінки. Сенс використання полягає в тому, що цей текст має більш-менш нормальне розподілення літер на відміну від, наприклад, "Тут іде текст.</p>
+			</li>
 			<li class="further">
 				<a href="#">Далі</a>
 			</li>
 		</ul>
 	</div>
     <div class="content">
-    	<img src="images/main-pic.png" alt="picture" />
-    	<h1>Події</h1>
-    	<ul class="news">
-    		<li>
-    			<img src="images/pic.png" alt="pic" />
-    			<h2>«Вже давно відомо»</h2>
-    			<p>Вже давно відомо, що читабельний зміст буде заважати зосередитись людині, яка оцінює композицію сторінки. Сенс використання Lorem Ipsum полягає в тому, що цей текст має більш-менш нормальне розподілення літер на відміну від, наприклад, "Тут іде текст. Тут іде текст." Це робить текст схожим на оповідний. Багато програм верстування та веб-дизайну використовують Lorem Ipsum як зразок і пошук за терміном "lorem ipsum" відкриє багато веб-сайтів, які знаходяться ще в зародковому стані. Різні версії Lorem Ipsum з'явились за минулі роки, деякі випадково, деякі було створено зумисно (зокрема, жартівливі).
-    				<span class="further"><a href="#">Далі</a></span>
-    			</p>
-    		</li>
-    		<li>
-    			<img src="images/pic.png" alt="pic" />
-    			<h2>«Вже давно відомо»</h2>
-    			<p>Вже давно відомо, що читабельний зміст буде заважати зосередитись людині, яка оцінює композицію сторінки. Сенс використання Lorem Ipsum полягає в тому, що цей текст має більш-менш нормальне розподілення літер на відміну від, наприклад, "Тут іде текст. Тут іде текст." Це робить текст схожим на оповідний. Багато програм верстування та веб-дизайну використовують Lorem Ipsum як зразок і пошук за терміном "lorem ipsum" відкриє багато веб-сайтів, які знаходяться ще в зародковому стані. Різні версії Lorem Ipsum з'явились за минулі роки, деякі випадково, деякі було створено зумисно (зокрема, жартівливі).
-					<span class="further"><a href="#">Далі</a></span>
-				</p>
-    		</li>
-    	</ul>
-    	<div>
-	    	<ul class="pages">
-	    		<li>Попередня</li>
-	    		<li class="active"><a href="#">1</a></li>
-	    		<li><a href="#">2</a></li>
-	    		<li><a href="#">3</a></li>
-	    		<li><a href="#">4</a></li>
-	    		<li><a href="#">5</a></li>
-	    		<li><a href="#">6</a></li>
-	    		<li><a href="#">7</a></li>
-	    		<li><a href="#">8</a></li>
-	    		<li class="active"><a href="#">Наступна</a></li>
+	    	<img src="images/main-pic.png" alt="picture" />
+	    	<h1>Події</h1>
+	    	<ul class="news">
+	    		<li>
+	    			<img src="images/pic.png" alt="pic" />
+	    			<h2>«Вже давно відомо»</h2>
+	    			<p>Вже давно відомо, що читабельний зміст буде заважати зосередитись людині, яка оцінює композицію сторінки. Сенс використання Lorem Ipsum полягає в тому, що цей текст має більш-менш нормальне розподілення літер на відміну від, наприклад, "Тут іде текст. Тут іде текст." Це робить текст схожим на оповідний. Багато програм верстування та веб-дизайну використовують Lorem Ipsum як зразок і пошук за терміном "lorem ipsum" відкриє багато веб-сайтів, які знаходяться ще в зародковому стані. Різні версії Lorem Ipsum з'явились за минулі роки, деякі випадково, деякі було створено зумисно (зокрема, жартівливі).
+	    				<span class="further"><a href="#">Далі</a></span>
+	    			</p>
+	    		</li>
+	    		<li>
+	    			<img src="images/pic.png" alt="pic" />
+	    			<h2>«Вже давно відомо»</h2>
+	    			<p>Вже давно відомо, що читабельний зміст буде заважати зосередитись людині, яка оцінює композицію сторінки. Сенс використання Lorem Ipsum полягає в тому, що цей текст має більш-менш нормальне розподілення літер на відміну від, наприклад, "Тут іде текст. Тут іде текст." Це робить текст схожим на оповідний. Багато програм верстування та веб-дизайну використовують Lorem Ipsum як зразок і пошук за терміном "lorem ipsum" відкриє багато веб-сайтів, які знаходяться ще в зародковому стані. Різні версії Lorem Ipsum з'явились за минулі роки, деякі випадково, деякі було створено зумисно (зокрема, жартівливі).
+						<span class="further"><a href="#">Далі</a></span>
+					</p>
+	    		</li>
 	    	</ul>
-    	</div>
-    	<div class="footer">
-	    	<p>&copy; Черкаський археологічний музей 2000-2013. При повному чи частковому використанні матеріалів посилання на сайт "ЧАМ" обовязкове. Дизайн сайту розроблено GeekHub і модернізований "ЧАМ".
-	    	</p>
-    	</div>
-    	</div>
-    </div>
-    <div class="footer">
+	    	<div>
+		    	<ul class="pages">
+		    		<li>Попередня</li>
+		    		<li class="active"><a href="#">1</a></li>
+		    		<li><a href="#">2</a></li>
+		    		<li><a href="#">3</a></li>
+		    		<li><a href="#">4</a></li>
+		    		<li><a href="#">5</a></li>
+		    		<li><a href="#">6</a></li>
+		    		<li><a href="#">7</a></li>
+		    		<li><a href="#">8</a></li>
+		    		<li><a href="#">Наступна</a></li>
+		    	</ul>
+	    	</div>
+	    	<div class="footer">
+		    	<p>&copy; Черкаський археологічний музей 2000-2013. При повному чи частковому використанні матеріалів посилання на сайт "ЧАМ" обовязкове. Дизайн сайту розроблено GeekHub і модернізований "ЧАМ".
+		    	</p>
+	    	</div>
     </div>
 </div>
 </body>
