Added regular text pages

--- a/adress.html
+++ b/adress.html
@@ -77,10 +77,10 @@
 		<ul id="menu" class="sidebar-menu">
 					<li><span>Про музей</span>
 					    <ul class="sidebar-submenu">
-					    <li><a href="text.html">Музей сьогодні</a></li>
-						<li><a href="#">Історія музею</a></li>
-						<li><a href="#">Перспективи музею</a></li>
-						<li><a href="#">Наші меценати</a></li>
+					     <li><a href="about.html">Музей сьогодні</a></li>
+						<li><a href="history.html">Історія музею</a></li>
+						<li><a href="perspective.html">Перспективи музею</a></li>
+						<li><a href="mecenat.html">Наші меценати</a></li>
 						<li><a href="#">Дарувальники музею</a></li>
 					    </ul>
 					</li>
