several variants of list

--- a/present.html
+++ b/present.html
@@ -130,6 +130,10 @@
 			
 			<div class="null-height"></div>
 
+
+			
+
+
 			<span class="color text">a</span>
 			<p class="text">Андрейко Т.С.
 Артеменко А.О.</p>
@@ -147,6 +151,22 @@
 Борисов А.В.
 Брайко О.А.
 Брейфорд Томас*</p>
+
+
+		<dl>
+			<dd class="color text">a</dd>
+			<dt class="text">Андрейко Т.С.</dt>
+			<dt class="text">Артеменко А.О.</dt>
+
+			<dd class="color text">б</dd>
+			<dt class="text">Бажан В.Г.*</dt>
+			<dt class="text">Байда Н.В.</dt>
+			<dt class="text">Балагура О.В.</dt>
+			
+		</dl>
+
+
+
 			<!--
 			<p class="text">Алєксєєв Д.І.
 Андрейко Т.С.
