athors add + menu

--- a/adress.html
+++ b/adress.html
@@ -97,9 +97,9 @@
 					<li><a href="#">Наші послуги</a></li>
 					<li><a href="#">Експозиції музею</a></li>
 					<li><a href="#">Галереї музею</a></li>
-					<li><a href="#">Наукова робота</a></li>
+					<li><a href="authors.html">Наукова робота</a></li>
 					<li><a href="#">Археологічний словник</a></li>
-					<li><a href="#">Допомога музею</a></li>
+					<li><a href="present.html">Допомога музею</a></li>
 					<li><a href="#">Ваші запитання</a></li>
 					<li><a href="#">Архів новин</a></li>
 		</ul>
