--- a/present.html
+++ b/present.html
@@ -97,9 +97,9 @@
 					<li><a href="#">Наші послуги</a></li>
 					<li><a href="#">Експозиції музею</a></li>
 					<li><a href="#">Галереї музею</a></li>
-					<li><a href="#">Наукова робота</a></li>
+					<li><a href="authors.html">Наукова робота</a></li>
 					<li><a href="#">Археологічний словник</a></li>
-					<li><a href="#">Допомога музею</a></li>
+					<li><a href="present.html">Допомога музею</a></li>
 					<li><a href="#">Ваші запитання</a></li>
 					<li><a href="#">Архів новин</a></li>
 				</ul>
@@ -128,12 +128,12 @@
 	    	
 			<h1>Дарувальники музею</h1>
 			
-			<div class="null-height"></div>
+			<!--<div class="null-height"></div>-->
 
 
 			
 
-
+<!--
 			<span class="color text">a</span>
 			<p class="text">Андрейко Т.С.
 Артеменко А.О.</p>
@@ -163,12 +163,12 @@
 			<dt class="text">Байда Н.В.</dt>
 			<dt class="text">Балагура О.В.</dt>
 			
-		</dl>
+		</dl>-->
 
 
 
-			<!--
-			<p class="text">Алєксєєв Д.І.
+			 <p class="text">
+Алєксєєв Д.І.
 Андрейко Т.С.
 Артеменко А.О.
 Бажан В.Г.*
@@ -386,9 +386,7 @@
 Якушенко А.М.*
 Яловенко І.Ю.
 Яременко А.М. 
-
-
-</p>-->
+ </p>
 
 	<span class="text">* - не студенти</span>		
 
