page with adress and map fixed

--- a/adress.html
+++ b/adress.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>museum adress</title>
-<link rel="stylesheet" href="js/jquery-ui-1.10.4.custom/css/jquery-ui-1.10.4.custom.min.css">
+<title>museum</title>
+<link rel="stylesheet" href="js/jquery-ui-1.10.4.custom/css/no-theme/jquery-ui-1.10.4.custom.min.css">
   <script src="js/jquery-1.11.0.min.js"></script>
   <script src="js/jquery-ui-1.10.4.custom/js/jquery-ui-1.10.4.custom.js"></script>
 <link rel="stylesheet" type="text/css" href="styles/styles.css" />
@@ -25,16 +25,16 @@
 			<li><a href="#">en</a></li>
 		</ul>
 		<span class="logo">
-		<a href="index.html">
+		<a href="#">
 			<img src="images/logo.png" alt="logo" />
 		</a>
 		</span>
-		<span class="name">Черкаський Музей Археології<br />Середньої Наддніпрянщини</span>
+		<span class="name">Черкаський археологічний музей Середньої Наддніпрянщини Черкаського національного університету ім. Богдана Хмельницького і Черкаської міської ради</span>
 		<ul class="menu-head">
 			<li><a href="#">Книга відгуків</a></li>
 			<li><a href="#">Мапа сайту</a></li>
 			<li><a href="#">Контакти</a></li>
-			<li><a href="index.html">На головну</a></li>
+			<li><a href="#">На головну</a></li>
 		</ul>
 	</div> 
 	<div class="sidebar">
@@ -42,11 +42,11 @@
    			<input type="search" name="search" placeholder="Пошук">
   		</form>
   		<!--<input class="button" type="button" value="Пошук">-->
-	<!--	<ul id="accordion" class="sidebar-menu">
-			<li>
+	<!--	<ul id="menu" class="sidebar-menu"> 
+			<li> 
 				<a href="#">Про музей</a>
-				<ul id="nodisplay" class="sidebar-submenu">
-					<li><a href="#">Музей сьогодні</a></li>
+				<ul class="sidebar-submenu nodisplay">
+					<li><a href="text.html">Музей сьогодні</a></li>
 					<li><a href="#">Історія музею</a></li>
 					<li><a href="#">Перспективи музею</a></li>
 					<li><a href="#">Наші меценати</a></li>
@@ -55,15 +55,15 @@
 			</li>
 			<li>
 				<a href="#">Відвідувачам</a>
-				<ul id="nodisplay" class="sidebar-submenu">
-					<li><a href="#">Як нас знайти</a></li>
+				<ul class="sidebar-submenu nodisplay">
+					<li><a href="adress.html">Як нас знайти</a></li>
 					<li><a href="#">Графік роботи</a></li>
 					<li><a href="#">Колектив музею</a></li>
 					<li><a href="#">Наші послуги</a></li>
-					<li><a href="#">Наші партнери</a></li>
+					<li><a href="partners.html">Наші партнери</a></li>
 				</ul>
 			</li>
-			<li><a href="partners.html">Наші партнери</a></li>
+			<li><a href="#">Наші партнери</a></li>
 			<li><a href="#">Наші послуги</a></li>
 			<li><a href="#">Експозиції музею</a></li>
 			<li><a href="#">Галереї музею</a></li>
@@ -72,12 +72,13 @@
 			<li><a href="#">Допомога музею</a></li>
 			<li><a href="#">Ваші запитання</a></li>
 			<li><a href="#">Архів новин</a></li>
-		</ul>-->
+		</ul>  -->
 
-		<ul id="menu" class="sidebar-menu">
+
+				<ul id="menu" class="sidebar-menu">
 					<li><span>Про музей</span>
 					    <ul class="sidebar-submenu">
-					     <li><a href="about.html">Музей сьогодні</a></li>
+					    <li><a href="about.html">Музей сьогодні</a></li>
 						<li><a href="history.html">Історія музею</a></li>
 						<li><a href="perspective.html">Перспективи музею</a></li>
 						<li><a href="mecenat.html">Наші меценати</a></li>
@@ -102,9 +103,7 @@
 					<li><a href="present.html">Допомога музею</a></li>
 					<li><a href="#">Ваші запитання</a></li>
 					<li><a href="#">Архів новин</a></li>
-		</ul>
-
-
+				</ul>
 
 		<ul class="notice">
 			<li><h3>Анонс подій</h3></li>
@@ -125,8 +124,24 @@
 		</ul>
 	</div>
     <div class="content">
-	    	<!--<img src="images/main-pic.png" alt="picture" />-->
-	    	
+
+    		<dl class="adress align-c">
+    			<dt>Адреса музею</dt>
+    				<dd>18000 м. Черкаси <br> вул. Байди Вишневецького, б.36</dd>
+    			<!--<dt>Поштова адреса музею</dt>
+    				<dd></dd>-->
+    			<dt>Контактні телефони</dt>
+    				<dd>45-32-85</dd>
+    			<dt>E-mail</dt>
+    				<dd>museum@ck.ua</dd>
+    			<dt>Графік роботи</dt>
+    				<dd>з 9.00 по 18.00</dd>
+    		</dl>
+
+
+
+
+
 	    	<div class="map">
 				<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com.ua/maps?q=+%D0%BC.+%D0%A7%D0%B5%D1%80%D0%BA%D0%B0%D1%81%D0%B8,+%D0%B2%D1%83%D0%BB.+%D0%A1%D0%BB%D0%B0%D0%B2%D0%B8+1&amp;hl=uk&amp;ie=UTF8&amp;sll=48.382803,31.17461&amp;sspn=11.838191,18.984375&amp;hnear=%D0%B2%D1%83%D0%BB.+%D0%A1%D0%BB%D0%B0%D0%B2%D0%B8,+1,+%D0%A7%D0%B5%D1%80%D0%BA%D0%B0%D1%81%D0%B8,+%D0%A7%D0%B5%D1%80%D0%BA%D0%B0%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C&amp;t=m&amp;hq=&amp;z=14&amp;ll=49.44821,32.060316&amp;output=embed">	
 				</iframe>
@@ -157,9 +172,11 @@
 						);
 			$('');
 	});
+
+
 </script>-->
 
-	
+<!--
 <script type="text/javascript">
 function init_menu() {
  	$('#menu ul').hide();
@@ -169,7 +186,27 @@ function init_menu() {
  							);
 					}
 	$(document).ready(function() {init_menu();});
+</script>-->
+
+<script type="text/javascript">
+function init_menu() {
+$('#menu ul').hide();
+$('#menu li span').click(
+ function() {
+    var checkElement=$(this).next();
+    if((checkElement.is('ul')) && (checkElement.is(':visible'))) { return false; }
+    if((checkElement.is('ul')) && (!checkElement.is(':visible'))) {
+        $('#menu ul:visible').slideUp('normal');
+        checkElement.slideDown('normal');
+        return false;
+    }
+ }
+);
+}
+$(document).ready(function() {init_menu();});
 </script>
+
+
 
 </body>
 </html>
