--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 		<ul class="menu-head">
 			<li><a href="#">Книга відгуків</a></li>
 			<li><a href="#">Мапа сайту</a></li>
-			<li><a href="#">Контакти</a></li>
-			<li><a href="#">На головну</a></li>
+			<li><a href="adress.html">Контакти</a></li>
+			<li><a href="index.html">На головну</a></li>
 		</ul>
 	</div> 
 	<div class="sidebar">
