--- a/adress.html
+++ b/adress.html
@@ -33,8 +33,8 @@
 		<ul class="menu-head">
 			<li><a href="#">Книга відгуків</a></li>
 			<li><a href="#">Мапа сайту</a></li>
-			<li><a href="#">Контакти</a></li>
-			<li><a href="#">На головну</a></li>
+			<li><a href="adress.html">Контакти</a></li>
+			<li><a href="index.html">На головну</a></li>
 		</ul>
 	</div> 
 	<div class="sidebar">
@@ -138,12 +138,8 @@
     				<dd>з 9.00 по 18.00</dd>
     		</dl>
 
-
-
-
-
 	    	<div class="map">
-				<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com.ua/maps?q=+%D0%BC.+%D0%A7%D0%B5%D1%80%D0%BA%D0%B0%D1%81%D0%B8,+%D0%B2%D1%83%D0%BB.+%D0%A1%D0%BB%D0%B0%D0%B2%D0%B8+1&amp;hl=uk&amp;ie=UTF8&amp;sll=48.382803,31.17461&amp;sspn=11.838191,18.984375&amp;hnear=%D0%B2%D1%83%D0%BB.+%D0%A1%D0%BB%D0%B0%D0%B2%D0%B8,+1,+%D0%A7%D0%B5%D1%80%D0%BA%D0%B0%D1%81%D0%B8,+%D0%A7%D0%B5%D1%80%D0%BA%D0%B0%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C&amp;t=m&amp;hq=&amp;z=14&amp;ll=49.44821,32.060316&amp;output=embed">	
+				<iframe width="625" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com.ua/maps?q=+%D0%BC.+%D0%A7%D0%B5%D1%80%D0%BA%D0%B0%D1%81%D0%B8,+%D0%B2%D1%83%D0%BB.+%D0%A1%D0%BB%D0%B0%D0%B2%D0%B8+1&amp;hl=uk&amp;ie=UTF8&amp;sll=48.382803,31.17461&amp;sspn=11.838191,18.984375&amp;hnear=%D0%B2%D1%83%D0%BB.+%D0%A1%D0%BB%D0%B0%D0%B2%D0%B8,+1,+%D0%A7%D0%B5%D1%80%D0%BA%D0%B0%D1%81%D0%B8,+%D0%A7%D0%B5%D1%80%D0%BA%D0%B0%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C&amp;t=m&amp;hq=&amp;z=14&amp;ll=49.44821,32.060316&amp;output=embed">	
 				</iframe>
 				<br />
 				<small><a href="https://maps.google.com.ua/maps?q=+%D0%BC.+%D0%A7%D0%B5%D1%80%D0%BA%D0%B0%D1%81%D0%B8,+%D0%B2%D1%83%D0%BB.+%D0%A1%D0%BB%D0%B0%D0%B2%D0%B8+1&amp;hl=uk&amp;ie=UTF8&amp;sll=48.382803,31.17461&amp;sspn=11.838191,18.984375&amp;hnear=%D0%B2%D1%83%D0%BB.+%D0%A1%D0%BB%D0%B0%D0%B2%D0%B8,+1,+%D0%A7%D0%B5%D1%80%D0%BA%D0%B0%D1%81%D0%B8,+%D0%A7%D0%B5%D1%80%D0%BA%D0%B0%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C&amp;t=m&amp;hq=&amp;z=14&amp;ll=49.44821,32.060316&amp;source=embed" style="color:#0000FF;text-align:left">Переглянути збільшену карту</a></small>
@@ -188,25 +184,23 @@ function init_menu() {
 	$(document).ready(function() {init_menu();});
 </script>-->
 
-<script type="text/javascript">
-function init_menu() {
-$('#menu ul').hide();
-$('#menu li span').click(
- function() {
-    var checkElement=$(this).next();
-    if((checkElement.is('ul')) && (checkElement.is(':visible'))) { return false; }
-    if((checkElement.is('ul')) && (!checkElement.is(':visible'))) {
-        $('#menu ul:visible').slideUp('normal');
-        checkElement.slideDown('normal');
-        return false;
-    }
- }
-);
-}
-$(document).ready(function() {init_menu();});
-</script>
-
-
+				<script type="text/javascript">
+				function init_menu() {
+				$('#menu ul').hide();
+				$('#menu li span').click(
+				 function() {
+				    var checkElement=$(this).next();
+				    if((checkElement.is('ul')) && (checkElement.is(':visible'))) { return false; }
+				    if((checkElement.is('ul')) && (!checkElement.is(':visible'))) {
+				        $('#menu ul:visible').slideUp('normal');
+				        checkElement.slideDown('normal');
+				        return false;
+				    }
+				 }
+				);
+				}
+				$(document).ready(function() {init_menu();});
+				</script>
 
 </body>
 </html>
