--- a/history.html
+++ b/history.html
@@ -33,7 +33,7 @@
 		<ul class="menu-head">
 			<li><a href="#">Книга відгуків</a></li>
 			<li><a href="#">Мапа сайту</a></li>
-			<li><a href="#">Контакти</a></li>
+			<li><a href="adress.html">Контакти</a></li>
 			<li><a href="index.html">На головну</a></li>
 		</ul>
 	</div> 
