--- a/adress.html
+++ b/adress.html
@@ -126,15 +126,15 @@
     <div class="content">
 
     		<dl class="adress align-c">
-    			<dt>Адреса музею</dt>
+    			<dt><span class="addr-name">Адреса музею</span></dt>
     				<dd>18000 м. Черкаси <br> вул. Байди Вишневецького, б.36</dd>
     			<!--<dt>Поштова адреса музею</dt>
     				<dd></dd>-->
-    			<dt>Контактні телефони</dt>
+    			<dt><span class="addr-name">Контактні телефони</span></dt>
     				<dd>45-32-85</dd>
-    			<dt>E-mail</dt>
+    			<dt><span class="addr-name">E-mail</span></dt>
     				<dd>museum@ck.ua</dd>
-    			<dt>Графік роботи</dt>
+    			<dt><span class="addr-name">Графік роботи</span></dt>
     				<dd>з 9.00 по 18.00</dd>
     		</dl>
 
