--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<li><a href="history.html">Історія музею</a></li>
 						<li><a href="perspective.html">Перспективи музею</a></li>
 						<li><a href="mecenat.html">Наші меценати</a></li>
-						<li><a href="#">Дарувальники музею</a></li>
+						<li><a href="present.html">Дарувальники музею</a></li>
 					    </ul>
 					</li>
 					<li><span>Відвідувачам</span>
@@ -100,7 +100,7 @@
 					<li><a href="#">Галереї музею</a></li>
 					<li><a href="authors.html">Наукова робота</a></li>
 					<li><a href="#">Археологічний словник</a></li>
-					<li><a href="present.html">Допомога музею</a></li>
+					<li><a href="#">Допомога музею</a></li>
 					<li><a href="#">Ваші запитання</a></li>
 					<li><a href="#">Архів новин</a></li>
 				</ul>
@@ -186,24 +186,6 @@
 	    	</div>
     </div>
 </div>
-<!--
-<script>
-	$(function(){
-			$('li.active').click(
-						function(){
-							$('ul.active').slideToggle('30000');
-						}
-						);
-			$('.sidebar-menu li').click(
-						function(){
-							$('li>ul#nodisplay').slideToggle('30000');
-						}
-						);
-			$('');
-	});
-
-
-</script>-->
 
 <!--
 <script type="text/javascript">
@@ -234,8 +216,6 @@ $('#menu li span').click(
 }
 $(document).ready(function() {init_menu();});
 </script>
-
-
 
 </body>
 </html>
