--- a/adress.html
+++ b/adress.html
@@ -82,7 +82,7 @@
 						<li><a href="history.html">Історія музею</a></li>
 						<li><a href="perspective.html">Перспективи музею</a></li>
 						<li><a href="mecenat.html">Наші меценати</a></li>
-						<li><a href="#">Дарувальники музею</a></li>
+						<li><a href="present.html">Дарувальники музею</a></li>
 					    </ul>
 					</li>
 					<li><span>Відвідувачам</span>
@@ -100,7 +100,7 @@
 					<li><a href="#">Галереї музею</a></li>
 					<li><a href="authors.html">Наукова робота</a></li>
 					<li><a href="#">Археологічний словник</a></li>
-					<li><a href="present.html">Допомога музею</a></li>
+					<li><a href="#">Допомога музею</a></li>
 					<li><a href="#">Ваші запитання</a></li>
 					<li><a href="#">Архів новин</a></li>
 				</ul>
@@ -153,54 +153,24 @@
 	    	</div>
     </div>
 </div>
-<!--
-<script>
-	$(function(){
-			$('li.active').click(
-						function(){
-							$('ul.active').slideToggle('30000');
-						}
-						);
-			$('.sidebar-menu li').click(
-						function(){
-							$('li>ul#nodisplay').slideToggle('30000');
-						}
-						);
-			$('');
-	});
-
-
-</script>-->
-
-<!--
-<script type="text/javascript">
-function init_menu() {
- 	$('#menu ul').hide();
- 	$('#menu li span').click(function() {
- 		$(this).next().slideToggle('normal');
- 										}
- 							);
-					}
-	$(document).ready(function() {init_menu();});
-</script>-->
 
 				<script type="text/javascript">
-				function init_menu() {
-				$('#menu ul').hide();
-				$('#menu li span').click(
-				 function() {
-				    var checkElement=$(this).next();
-				    if((checkElement.is('ul')) && (checkElement.is(':visible'))) { return false; }
-				    if((checkElement.is('ul')) && (!checkElement.is(':visible'))) {
-				        $('#menu ul:visible').slideUp('normal');
-				        checkElement.slideDown('normal');
-				        return false;
-				    }
-				 }
-				);
-				}
-				$(document).ready(function() {init_menu();});
-				</script>
+function init_menu() {
+$('#menu ul').hide();
+$('#menu li span').click(
+ function() {
+    var checkElement=$(this).next();
+    if((checkElement.is('ul')) && (checkElement.is(':visible'))) { return false; }
+    if((checkElement.is('ul')) && (!checkElement.is(':visible'))) {
+        $('#menu ul:visible').slideUp('normal');
+        checkElement.slideDown('normal');
+        return false;
+    }
+ }
+);
+}
+$(document).ready(function() {init_menu();});
+</script>
 
 </body>
 </html>
