Revert "fancybox + exposition_page make up"
This reverts commit ebee65d061331bbd87b850ac2e053b1373698fdd.

--- a/index.html
+++ b/index.html
@@ -41,18 +41,21 @@
 		<form>
    			<input type="search" name="search" placeholder="Пошук">
   		</form>
-		<ul id="menu" class="sidebar-menu">
-			<li><span>Про музей</span>
-			    <ul class="sidebar-submenu">
-				    <li><a href="about.html">Музей сьогодні</a></li>
-					<li><a href="history.html">Історія музею</a></li>
-					<li><a href="perspective.html">Перспективи музею</a></li>
-					<li><a href="mecenat.html">Наші меценати</a></li>
-					<li><a href="present.html">Дарувальники музею</a></li>
-			    </ul>
+  		<!--<input class="button" type="button" value="Пошук">-->
+	<!--	<ul id="menu" class="sidebar-menu"> 
+			<li> 
+				<a href="#">Про музей</a>
+				<ul class="sidebar-submenu nodisplay">
+					<li><a href="text.html">Музей сьогодні</a></li>
+					<li><a href="#">Історія музею</a></li>
+					<li><a href="#">Перспективи музею</a></li>
+					<li><a href="#">Наші меценати</a></li>
+					<li><a href="#">Дарувальники музею</a></li>
+				</ul>
 			</li>
-			<li><span>Відвідувачам</span>
-				<ul class="sidebar-submenu">
+			<li>
+				<a href="#">Відвідувачам</a>
+				<ul class="sidebar-submenu nodisplay">
 					<li><a href="adress.html">Як нас знайти</a></li>
 					<li><a href="#">Графік роботи</a></li>
 					<li><a href="#">Колектив музею</a></li>
@@ -60,16 +63,47 @@
 					<li><a href="partners.html">Наші партнери</a></li>
 				</ul>
 			</li>
-			<li><a href="partners.html">Наші партнери</a></li>
+			<li><a href="#">Наші партнери</a></li>
 			<li><a href="#">Наші послуги</a></li>
-			<li><a href="exposition.html">Експозиції музею</a></li>
+			<li><a href="#">Експозиції музею</a></li>
 			<li><a href="#">Галереї музею</a></li>
-			<li><a href="authors.html">Наукова робота</a></li>
+			<li><a href="#">Наукова робота</a></li>
 			<li><a href="#">Археологічний словник</a></li>
 			<li><a href="#">Допомога музею</a></li>
 			<li><a href="#">Ваші запитання</a></li>
 			<li><a href="#">Архів новин</a></li>
-		</ul>
+		</ul>  -->
+
+
+				<ul id="menu" class="sidebar-menu">
+					<li><span>Про музей</span>
+					    <ul class="sidebar-submenu">
+					    <li><a href="about.html">Музей сьогодні</a></li>
+						<li><a href="history.html">Історія музею</a></li>
+						<li><a href="perspective.html">Перспективи музею</a></li>
+						<li><a href="mecenat.html">Наші меценати</a></li>
+						<li><a href="present.html">Дарувальники музею</a></li>
+					    </ul>
+					</li>
+					<li><span>Відвідувачам</span>
+						<ul class="sidebar-submenu">
+						<li><a href="adress.html">Як нас знайти</a></li>
+						<li><a href="#">Графік роботи</a></li>
+						<li><a href="#">Колектив музею</a></li>
+						<li><a href="#">Наші послуги</a></li>
+						<li><a href="partners.html">Наші партнери</a></li>
+						</ul>
+					</li>
+					<li><a href="partners.html">Наші партнери</a></li>
+					<li><a href="#">Наші послуги</a></li>
+					<li><a href="#">Експозиції музею</a></li>
+					<li><a href="#">Галереї музею</a></li>
+					<li><a href="authors.html">Наукова робота</a></li>
+					<li><a href="#">Археологічний словник</a></li>
+					<li><a href="#">Допомога музею</a></li>
+					<li><a href="#">Ваші запитання</a></li>
+					<li><a href="#">Архів новин</a></li>
+				</ul>
 
 		<ul class="notice">
 			<li><h3>Анонс подій</h3></li>
