--- a/perspective.html
+++ b/perspective.html
@@ -41,6 +41,38 @@
 		<form>
    			<input type="search" name="search" placeholder="Пошук">
   		</form>
+  		<!--<input class="button" type="button" value="Пошук">-->
+	<!--	<ul id="accordion" class="sidebar-menu">
+			<li> 
+				<a href="#">Про музей</a>
+				<ul id="nodisplay" class="sidebar-submenu">
+					<li><a href="#">Музей сьогодні</a></li>
+					<li><a href="#">Історія музею</a></li>
+					<li><a href="#">Перспективи музею</a></li>
+					<li><a href="#">Наші меценати</a></li>
+					<li><a href="#">Дарувальники музею</a></li>
+				</ul>
+			</li>
+			<li>
+				<a href="#">Відвідувачам</a>
+				<ul id="nodisplay" class="sidebar-submenu">
+					<li><a href="adress.html">Як нас знайти</a></li>
+					<li><a href="#">Графік роботи</a></li>
+					<li><a href="#">Колектив музею</a></li>
+					<li><a href="#">Наші послуги</a></li>
+					<li><a href="#">Наші партнери</a></li>
+				</ul>
+			</li>
+			<li><a href="partners.html">Наші партнери</a></li>
+			<li><a href="#">Наші послуги</a></li>
+			<li><a href="#">Експозиції музею</a></li>
+			<li><a href="#">Галереї музею</a></li>
+			<li><a href="#">Наукова робота</a></li>
+			<li><a href="#">Археологічний словник</a></li>
+			<li><a href="#">Допомога музею</a></li>
+			<li><a href="#">Ваші запитання</a></li>
+			<li><a href="#">Архів новин</a></li>
+		</ul>-->
 
 		<ul id="menu" class="sidebar-menu">
 					<li><span>Про музей</span>
@@ -63,7 +95,7 @@
 					</li>
 					<li><a href="partners.html">Наші партнери</a></li>
 					<li><a href="#">Наші послуги</a></li>
-					<li><a href="exposition.html">Експозиції музею</a></li>
+					<li><a href="#">Експозиції музею</a></li>
 					<li><a href="#">Галереї музею</a></li>
 					<li><a href="authors.html">Наукова робота</a></li>
 					<li><a href="#">Археологічний словник</a></li>
