--- a/exposition-1.html
+++ b/exposition-1.html
@@ -3,16 +3,16 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>museum</title>
+
 <link rel="stylesheet" href="js/jquery-ui-1.10.4.custom/css/jquery-ui-1.10.4.custom.min.css">
-  <script src="js/jquery-1.11.0.min.js"></script>
-  <script src="js/jquery-ui-1.10.4.custom/js/jquery-ui-1.10.4.custom.js"></script>
 
+<script src="js/jquery-1.11.0.min.js"></script>
+<script src="js/jquery-ui-1.10.4.custom/js/jquery-ui-1.10.4.custom.js"></script>
 
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-  <script type="text/javascript" src="fancybox/jquery.fancybox-1.3.4.pack.js"></script>
-  <script type="text/javascript" src="fancybox/jquery.easing-1.4.pack.js"></script>
-  <script type="text/javascript" src="fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
-  <link rel="stylesheet" href="fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
+<!--fancybox -->
+<link rel="stylesheet" href="fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+<script type="text/javascript" src="fancybox/jquery.fancybox.pack.js"></script> 
+	
 
 <link rel="stylesheet" type="text/css" href="styles/styles.css" />
 <!--
@@ -179,25 +179,13 @@ $(document).ready(function() {init_menu();});
 
 
 <script type="text/javascript">
-	    $(document).ready(function() {
+	$(document).ready(function() {
 	        $("#big_image").fancybox({
-
-	        	'hideOnOverlayClick' : true,
-	        	'showCloseButton'    : false,
-	        	'easingIn'			 : 'swing',
-	        	'overlayOpacity'     : '0.7',
-	        	'overlayColor'       : '#bbb',
-	        	'hideOnContentClick' : true,
-
-	        	'transitionIn'  :   'elastic',
-	        	'transitionOut' :   'elastic',
-	        	'speedIn'       :   800,
-	        	'speedOut'      :   200,
-	        	'overlayShow'   :   false
-
-
-	        	});
+                padding : 0,
+                openEffect  : 'elastic'
+            });
 	    });
+
 </script>
 
 
